# libtta

./: .gitignore  CMakeLists.txt  README  config.h.in  filter.h  filter_avx.h  libtta.cpp  libtta.h
console/: tta.cpp  tta.h
